# design_patterns_c

chain_of_responsibilty/: CMakeLists.txt  chain_base.c  chain_base.h  handler1.c  handler1.h  handler2.c  handler2.h  handler3.c  handler3.h  main.c  starter.c  starter.h
command/: CMakeLists.txt  client.c  client.h  command.c  command.h  command1.c  command1.h  command2.c  command2.h  commander.c  commander.h  main.c  subject.c  subject.h
iterator/: CMakeLists.txt  iterator.c  iterator.h  main.c  period1.c  period1.h  period2.c  period2.h  period3.c  period3.h  time_period.c  time_period.h  time_period_list.c  time_period_list.h
observer/: CMakeLists.txt  listener1.c  listener1.h  listener2.c  listener2.h  main.c  observer.c  observer.h  subject.c  subject.h  trigger.c  trigger.h
